tests/parse_print/parsing01/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/parsing01/parsing01.essence (line 3, column 14):
unexpected end of input
expecting expression, operator, dot or )
    (line 3, column 14)
    given g : int(
                 ^